# normal-path

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  checks.nix  flake.nix
checks/: cargo-test.nix  default.nix
flake/: checks.nix
flake/dev/: devenv.nix  flake.nix
src/: lib.rs  public.rs  testing.rs  trivial.rs
src/draw/: mod.rs  unix.rs  windows.rs
src/imp/: mod.rs  unix.rs  windows.rs
