[package]
name = "normal-path"
description = "Ensure paths are normalized without I/O"
version = "0.2.0"
edition = "2021"
rust-version = "1.78.0"

repository = "https://github.com/auckas/normal-path"
license = "MIT OR Apache-2.0"

keywords = ["path", "canonicalize", "normalize", "validate"]
categories = ["filesystem", "os"]

exclude = [".*", "*.nix", "flake/", "flake.lock"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies.serde]
version = "1.0"
optional = true

[dev-dependencies.fastrand]
version = "2.3"

[features]
default = []
serde = ["dep:serde"]
